# discord.html

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
discordhtml/: __init__.py  bot.py  errors.py  parser.py  utils.py
discordhtml/commands/: __init__.py  core.py  params.py
discordhtml/commands/actions/: __init__.py  core.py  default.py
discordhtml/examples/: simple.html
examples/: simple.html
src/: bot.ts  command.ts  commands.ts  index.ts  parser.ts  util.ts
src/actions/: AbstractAction.ts  ActionManager.ts  SendMessageAction.ts
src/examples/: simplePingBot.html  simpleRoleBot  simpleRoleBot.html
