[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord.html"
version = "0.0.1"
authors = [
  { name="DistortedPumpkin" },
]
description = "A revolutionary library to interact with the Discord API using HTML"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8.0"
dependencies = ['discord.py==2.0.0a', 'bs4']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]

[project.urls]
"Homepage" = "https://github.com/DistortedPumpkin/discord.html"
"Bug Tracker" = "https://github.com/DistortedPumpkin/discord.html/issues"
